Fix dark mode CSS bug

--- a/application/basilisk/themes/windows/browser.css
+++ b/application/basilisk/themes/windows/browser.css
@@ -5240,18 +5240,21 @@ toolbar[brighttext] #close-button:hover:active {
 
 :root[data-theme="dark"] #PanelUI-popup toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
+:root[data-theme="dark"] #PanelUI-popup #zoom-controls > toolbarbutton > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup #PanelUI-fxa-icon > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup #PanelUI-customize > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup #PanelUI-help > .toolbarbutton-icon,
 :root[data-theme="dark"] #PanelUI-popup #PanelUI-quit > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
+#main-window[lwtheme-brighttext] #PanelUI-popup #zoom-controls > toolbarbutton > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup #PanelUI-fxa-icon > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup #PanelUI-customize > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup #PanelUI-help > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #PanelUI-popup #PanelUI-quit > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup toolbarbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup toolbarbutton[panel-multiview-anchor="true"] > .toolbarbutton-icon,
+toolbar[brighttext] #PanelUI-popup #zoom-controls > toolbarbutton > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup #PanelUI-fxa-icon > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup #PanelUI-customize > .toolbarbutton-icon,
 toolbar[brighttext] #PanelUI-popup #PanelUI-help > .toolbarbutton-icon,
@@ -5307,6 +5310,8 @@ toolbar[brighttext] #global-notificationbox,
 :root[data-theme="dark"] #nav-bar .toolbarbutton-icon,
 :root[data-theme="dark"] #nav-bar .toolbarbutton-menubutton-button > .toolbarbutton-icon,
 :root[data-theme="dark"] #nav-bar .toolbarbutton-badge-stack > .toolbarbutton-icon,
+:root[data-theme="dark"] #downloads-button > #downloads-indicator-anchor > #downloads-indicator-icon,
+:root[data-theme="dark"] #downloads-button > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter,
 :root[data-theme="dark"] #back-button > .toolbarbutton-icon,
 :root[data-theme="dark"] #forward-button > .toolbarbutton-icon,
 :root[data-theme="dark"] #urlbar-reload-button > .toolbarbutton-icon,
@@ -5333,6 +5338,8 @@ toolbar[brighttext] #global-notificationbox,
 #main-window[lwtheme-brighttext] #nav-bar .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #nav-bar .toolbarbutton-menubutton-button > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #nav-bar .toolbarbutton-badge-stack > .toolbarbutton-icon,
+#main-window[lwtheme-brighttext] #downloads-button > #downloads-indicator-anchor > #downloads-indicator-icon,
+#main-window[lwtheme-brighttext] #downloads-button > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter,
 #main-window[lwtheme-brighttext] #back-button > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #forward-button > .toolbarbutton-icon,
 #main-window[lwtheme-brighttext] #urlbar-reload-button > .toolbarbutton-icon,
@@ -5360,7 +5367,9 @@ toolbar[brighttext] #identity-icon,
 toolbar[brighttext] #tracking-protection-icon,
 toolbar[brighttext] #connection-icon,
 toolbar[brighttext] #default-notification-icon,
-toolbar[brighttext] #notification-popup-box .notification-anchor-icon {
+toolbar[brighttext] #notification-popup-box .notification-anchor-icon,
+toolbar[brighttext] #downloads-button > #downloads-indicator-anchor > #downloads-indicator-icon,
+toolbar[brighttext] #downloads-button > #downloads-indicator-anchor > #downloads-indicator-progress-area > #downloads-indicator-counter {
   filter: invert(100%) brightness(1.12) !important;
 }
 
